--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                             <p class="text-muted mb-2 font-14"><a href="javascript:void(0)"
                                                     class="text-black">Phone: </a> +62 813-5693-6352</p>
                                             <p class="text-muted mb-2 font-14"><a href="javascript:void(0)"
-                                                    class="text-black">Lokasi: </a> Kota Jambi, Jambi</p>
+                                                    class="text-black">Lokasi: </a>Jakarta, Indonesia</p>
                                             <p class="text-muted mb-0 font-14"><a href="javascript:void(0)"
                                                     class="text-black">Bahasa: </a> Indonesia</p>
                                         </div>
@@ -973,7 +973,7 @@
                         </div>
                         <div class="content mt-4">
                             <h5 class="title">Lokasi</h5>
-                            <p class="text-light-muted">Kota Jambi, Jambi <br>Indonesia</p>
+                            <p class="text-light-muted">Jakarta, Indonesia</p>
                             <a href="https://www.linkedin.com/in/putrywulandaari" target="_blank"
                                 class="text-primary">LinkedIn Profile</a>
                         </div>
